k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsc-concierge
  labels:
    app: dsc-concierge
spec:
  type: ClusterIP
  selector:
    app: dsc-concierge
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
